<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ch.opentrainingcenter</groupId>
	<artifactId>opentrainingcenter</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho.version>0.20.0</tycho.version>
		<jacoco.version>0.7.1.201405082137</jacoco.version>
		<eclipse-repository-url>http://download.eclipse.org/eclipse/updates/3.8</eclipse-repository-url>
		<sonar.host.url>http://localhost:9000</sonar.host.url>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.jacoco.reportPath>target/jacoco.exec</sonar.jacoco.reportPath>
		<sonar.exclusions>
			opentrainingcenter,
			org.hibernate,
			logging,
			jfreechart,
			com.eclipsesource.widgets.gmaps,
			junit,
			h2_lib,
			ch.opentrainingcenter.tcx/**/*.java,
			ch.opentrainingcenter.tcx.ObjectFactory.java,
			**/*Test.java,
			**/Messages.java,
			ch/**/Messages.java,
			com/**/*.java,
			ch/opentrainingcenter/importer/fitnesslog/model/*.java
		</sonar.exclusions>
	</properties>

	<repositories>
		<repository>
			<id>eclipse38-platform-sdk</id>
			<layout>p2</layout>
			<url>${eclipse-repository-url}</url><!-- http://download.eclipse.org/releases/juno/</url> -->
		</repository>
	</repositories>

	<modules>
		<module>ch.opentrainingcenter.product</module>
		<module>ch.opentrainingcenter.client</module>
		<module>ch.opentrainingcenter.charts</module>
		<module>ch.opentrainingcenter.core</module>
		<module>ch.opentrainingcenter.model</module>
		<module>ch.opentrainingcenter.database</module>
		<module>ch.opentrainingcenter.db</module>
		<module>ch.opentrainingcenter.db.postgres</module>
		<module>ch.opentrainingcenter.db.oracle</module>
		<module>ch.opentrainingcenter.i18n</module>
		<module>ch.opentrainingcenter.importer.tcx</module>
		<module>ch.opentrainingcenter.importer.gpx</module>
		<module>ch.opentrainingcenter.importer.fit</module>
		<module>ch.opentrainingcenter.tcx</module>
		<module>ch.opentrainingcenter.transfer</module>
		<module>ch.opentrainingcenter.route</module>
		<module>com.eclipsesource.widgets.gmaps</module>
		<module>h2</module>
		<module>postgres</module>
		<module>oracle14</module>
		<module>geocalc</module>
		<module>jfreechart</module>
		<module>jodatime</module>
		<module>logging</module>
		<module>com.garmin.fit</module>
		<module>org.hibernate</module>
		<!-- Tests -->
		<module>junit</module>
		<module>mockito</module>
		<module>ch.opentrainingcenter.client.tests</module>
		<module>ch.opentrainingcenter.core.tests</module>
		<module>ch.opentrainingcenter.charts.tests</module>
		<module>ch.opentrainingcenter.db.tests</module>
		<module>ch.opentrainingcenter.database.tests</module>
		<!--<module>ch.opentrainingcenter.db.postgres.tests</module -->
		<module>ch.opentrainingcenter.importer.tcx.tests</module>
		<module>ch.opentrainingcenter.importer.gpx.tests</module>
		<module>ch.opentrainingcenter.importer.fit.tests</module>
		<module>ch.opentrainingcenter.model.tests</module>
		<module>ch.opentrainingcenter.route.tests</module>
	</modules>

	<profiles>
		<profile>
			<id>e37</id>
			<properties>
				<eclipse-repository-url>${eclipse-repository-url}</eclipse-repository-url>
			</properties>
		</profile>
	</profiles>


	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<useUIHarness>false</useUIHarness>
					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=256M</argLine>
					<includes>
						<include>**/*Tests.*</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>2.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<forkCount>5</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Dnet.sf.ehcache.disabled=true</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<resolver>p2</resolver>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<!-- <environment> <os>macosx</os> <ws>carbon</ws> <arch>x86</arch> 
							</environment> <environment> <os>macosx</os> <ws>cocoa</ws> <arch>x86</arch> 
							</environment> <environment> <os>macosx</os> <ws>cocoa</ws> <arch>x86_64</arch> 
							</environment> -->
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
